@startuml
' Visual map of the TFG service (hexagonal architecture)
' Render with PlantUML to get an SVG/PNG.

skinparam componentStyle rectangle

package "Domain (core)\ncom.timcritt.tfg.domain" as Domain {
  [TestItem] as TestItem
}

package "Application (use-cases)\ncom.timcritt.tfg.application" as Application {
  package "ports.inbound" {
    interface "TestUseCase" as TestUseCase
  }
  package "ports.outbound" {
    interface "TestRepositoryPort" as TestRepositoryPort
  }
  package "service" {
    [TestService] as TestService
  }
  package "exception" {
    [TestNotFoundException]
  }
}

package "Infrastructure / Adapters\ncom.timcritt.tfg.infrastructure" as Infrastructure {
  package "web" {
    [TestController]
    [TestDtoMapper]
    [GlobalExceptionHandler]
  }
  package "persistence" {
    [TestRepositoryAdapter]
    [TestEntityMapper]
    [JPA Entities]
  }
  package "security" {
    [SecurityConfig]
  }
  package "spring" {
    [Eureka Client \n(eureka connection)]
  }
}

package "App entry" {
  [TfgApplication]
}

' Dependencies / flow arrows
TestController --> TestDtoMapper : map DTO -> domain
TestController --> TestUseCase : call
TestUseCase <|.. TestService : implements
TestService --> TestRepositoryPort : use port
TestRepositoryPort <|.. TestRepositoryAdapter : implements
TestRepositoryAdapter --> TestEntityMapper : map entity <-> domain
TestEntityMapper --> TestItem
TestRepositoryAdapter --> [JPA Entities] : persist
[JPA Entities] --> (Database)
TestUseCaseImpl --> TestNotFoundException : throws
TestController --> GlobalExceptionHandler : exception -> 404
GlobalExceptionHandler ..> TestNotFoundException : maps
TfgApplication --> Eureka Client : registers
TfgApplication --> SecurityConfig : loads

' Notes showing file examples
note right of TestItem
  Example: src/main/java/com/timcritt/tfg/domain/model/TestItem.java
end note
note right of TestUseCase
  Example: src/main/java/com/timcritt/tfg/application/port/inbound/TestUseCase.java
end note
note right of TestRepositoryPort
  Example: src/main/java/com/timcritt/tfg/application/port/outbound/TestRepositoryPort.java
end note
note right of TestUseCaseImpl
  Example: src/main/java/com/timcritt/tfg/application/service/TestUseCaseImpl.java
end note
note right of TestRepositoryAdapter
  Example: src/main/java/com/timcritt/tfg/infrastructure/persistence/TestRepositoryAdapter.java
end note
note right of TestController
  Example: src/main/java/com/timcritt/tfg/infrastructure/web/TestController.java
end note
note right of GlobalExceptionHandler
  Example: src/main/java/com/timcritt/tfg/infrastructure/web/GlobalExceptionHandler.java
end note
note bottom of diagram
  To render: use PlantUML (IDE plugin, plantuml.jar, or online)
end note

@enduml
